samples/_failures_safe/1761425220_44fbd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8240a6e1.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_8240a6e1.c:167:32: error: expected ‘)’ at end of input
  167 |     if (input == NULL || strlen
      |        ~                       ^
      |                                )
./samples/SAFE/__tmp_8240a6e1.c:167:5: error: expected declaration or statement at end of input
  167 |     if (input == NULL || strlen
      |     ^~
